--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "online shop web application",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve",
+    "watch": "webpack --watch",
+    "build": "webpack",
     "test": "jest"
   },
   "author": "Dody Prakarsa",
@@ -12,6 +15,12 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.1.0"
+    "jest": "^27.1.0",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2"
   }
 }
