--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve",
     "watch": "webpack --watch",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
+    "build-dev": "webpack",
     "test": "jest"
   },
   "author": "Dody Prakarsa",
