--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
     "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
